--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
 	<packaging>jar</packaging>
 
 	<name>cucumber1</name>
-	<url>http://maven.apache.org</url>
+	<url>https://www.dezlearn.com</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>10</maven.compiler.source>
-		<maven.compiler.target>10</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -50,5 +50,49 @@
 			<artifactId>serenity-cucumber4</artifactId>
 			<version>2.1.2</version>
 		</dependency>
+		<dependency>
+    		<groupId>net.masterthought</groupId>
+    		<artifactId>maven-cucumber-reporting</artifactId>
+    		<version>5.3.0</version>
+		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>net.masterthought</groupId>
+                <artifactId>maven-cucumber-reporting</artifactId>
+                <version>2.8.0</version>
+                <executions>
+                	<execution>
+                		<id>execution</id>
+                		<phase>verify</phase>
+                		<goals>
+                			<goal>generate</goal>
+                		</goals>
+                		<configuration>
+                			<skip>false</skip>
+                			<outputDirectory>${project.build.directory}/masterthought-report</outputDirectory>
+                			<cucumberOutput>${project.build.directory}/json-report/cucumber.json</cucumberOutput>
+                		</configuration>
+                	</execution>
+                </executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
